<resources>
    <string name="app_name">UploadGallery</string>
    <string name="action_settings">Settings</string>
    <string name="empty_gallery">No uploaded images found.\nPress \'+\' to start uploading process</string>
    <string name="dialog_upload_title">Upload image</string>
    <string name="dialog_upload_message">Choose image source</string>
    <string name="dialog_upload_camera">Camera</string>
    <string name="dialog_upload_gallery">Gallery</string>
    <string name="no_camera_permission">To make a photo, camera permission is required</string>
    <string name="no_camera_resolved">To make a photo, camera app is required</string>
    <string name="no_gallery_permission">To choose a photo, storage permission is required</string>
    <string name="dialog_network_title">Something went wrong</string>
    <string name="dialog_network_message">Sorry, internet connection was unsuccessful</string>
    <string name="dialog_manipulation_title">Something went wrong</string>
    <string name="dialog_manipulation_message">Sorry, saving or uploading image was unsuccessful</string>
    <string name="manipulator_save">Save</string>
    <string name="manipulator_cancel">Cancel</string>
    <string name="cached_image_prefix">cached-image</string>
    <string name="cached_image_suffix">.jpg</string>
</resources>
