<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/dimmed"
             android:padding="@dimen/border_margin">

    <RelativeLayout
        android:id="@+id/rlManipulator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/border_little_margin">

        <ImageView
            android:id="@+id/ivManipulatorSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_save"/>

        <ImageView
            android:id="@+id/ivManipulatorRotateLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/center"
            android:src="@drawable/ic_rotate_left"/>

        <ImageView
            android:id="@+id/ivManipulatorRotateRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/center"
            android:src="@drawable/ic_rotate_right"/>

        <View
            android:id="@+id/center"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/ivManipulatorCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_close"/>


        <com.isseiaoki.simplecropview.CropImageView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ivManipulatorSave"
            android:layout_marginTop="@dimen/border_little_margin"
            custom:scv_background_color="@color/colorPrimaryDark"
            custom:scv_crop_mode="fit_image"
            custom:scv_frame_color="@color/colorAccent"
            custom:scv_frame_stroke_weight="1dp"
            custom:scv_guide_color="@color/colorAccent"
            custom:scv_guide_show_mode="show_always"
            custom:scv_guide_stroke_weight="1dp"
            custom:scv_handle_color="@color/colorAccent"
            custom:scv_handle_show_mode="show_always"
            custom:scv_handle_size="14dp"
            custom:scv_min_frame_size="50dp"
            custom:scv_overlay_color="@color/overlay"
            custom:scv_touch_padding="8dp"/>

        <ProgressBar
            android:id="@+id/pbManipulator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:foregroundGravity="center"
            android:visibility="gone"/>

    </RelativeLayout>
</FrameLayout>